# usepweb_project

./: .gitignore  README.md  REPORT__display_inscription_handling.md  TEMP_INSTRUCTIONS.md  pyproject.toml  sample.env
config/: passenger_wsgi-OLD.py  passenger_wsgi.py  requirements.in  requirements.txt  settings.py  urls.py
misc/: PLAN__db_export_import_script.md  PLAN__start_using_migrations.md  readme.md
usep_app/: admin.py  models.py  search.py  settings_app.py  tests.py  tests_db_transfer_validation.py  views.py
usep_app/libs/: version_helper.py
usep_app/libs/a11y/: README.md  __init__.py  playwright_axe_audit.py
usep_app/management/commands/: db_transfer_validation.py
usep_app/static/usep/css/: inscription.css  style.css
usep_app/static/usep/js/highslide/: highslide.css
usep_app/templatetags/: quote_plus_tag.py  vocab.py
usep_app/usep_templates/: base.html  collectioN.html  collectionS.html  display_inscription.html  publicatioN.html  publications.html  results.html  search_form.html  static.html
