[project]
name = "site-checker-project"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.10,<3.8.11"
dependencies = [
    "Django==1.11.29",
    "lxml==4.4.1",
    "requests==2.25.1",
    "shellvars-py @ git+https://github.com/birkin/shellvars-py.git",
]

[dependency-groups]
local = []
staging = [
    "mysqlclient==1.4.6",
]
prod = [
    "mysqlclient==1.4.6",
]
